Details
-
Bug
-
Status: Closed (View Workflow)
-
Critical
-
Resolution: Fixed
-
12.2(EOL)
-
Can result in unexpected behaviour
Description
RESET SLAVE 'named' ALL deletes the entire named CHANGE MASTER entry.
Correspondingly, RESET SLAVE ALL on the default unnamed slave should clear all of its configurations from the server.
CHANGE MASTER TO |
master_user='replssl', |
master_password='', |
master_ssl=1,
|
master_ssl_ca ='path/to/cacert.pem', |
master_ssl_cert='path/to/client-cert.pem', |
master_ssl_key='path/to/client-key.pem'; |
RESET SLAVE ALL; -- Should be a fresh start … |
SHOW SLAVE STATUS; -- … but this still shows SSL options. |
|
|
CHANGE MASTER TO |
master_user='replssl', |
master_password='', master_host='localhost'; |
START SLAVE; -- can still connect, even if the `replssl` user requires SSL |
Attachments
Issue Links
- causes
-
MDEV-40031 RESET SLAVE ALL resets `master_ssl_verify_server_cert` to wrong default
-
- Open
-
- relates to
-
MDEV-548
Multi-source: Behavior of "RESET SLAVE 'name'" is inconsistent with the normal RESET SLAVE
-
- Closed
-
-
MDEV-37530 Refactor Master & Relay Log info to iterable tuples
-
- Closed
-