MDEV-38497 Remove all slave related configurations after RESET SLAVE ALL